--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
 
             <!-- VSL -->
             <div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/689163144?h=81047cf2a3&amp;badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen style="position:absolute;top:0;left:0;width:100%;height:100%;" title="Magra zero"></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
+            
             <!-- Botão 1 -->
             <div id="cta1" class="mt-4 d-none">
               <a href="https://pay.kiwify.com.br/DqDMyxi" class="a-btn" style="text-decoration: none;">
@@ -440,9 +441,10 @@
                 </div>
               </div>
             </div>
+            
             <!-- Botão 2 -->
             <div id="cta2" class="mt-4 d-none">
-              <a href="https://https://pay.kiwify.com.br/DqDMyxi" class="a-btn" style="text-decoration: none;">
+              <a href="https://pay.kiwify.com.br/DqDMyxi" class="a-btn" style="text-decoration: none;">
                 <span class="span-btn">QUERO OBTER ACESSO!</span>
                 <span class="span-btn2">(atenção: vagas limitadas)</span>
               </a>
@@ -457,7 +459,7 @@
     </footer>
 
     <script type="text/javascript">
-      setTimeout(() => {document.getElementById("cta1").classList.remove("d-none"); document.getElementById("cta2").classList.remove("d-none")}, 1637000); // temporização da Call to Action (em milissegundos)
+      setTimeout(() => {document.getElementById("cta1").classList.remove("d-none"); document.getElementById("cta2").classList.remove("d-none")}, 1702000); // temporização da Call to Action (em milissegundos) - Antigo: 1637000
     </script>
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
