--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             <h3 class="my-4"><b>6 ingredientes Simples Que Fazem O Corpo Queimar Até 10Kg Em 30 Dias</b></h3>
 
             <!-- VSL -->
-            <div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/689163144?h=81047cf2a3&amp;badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen style="position:absolute;top:0;left:0;width:100%;height:100%;" title="Magra zero"></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
+            <script type="text/javascript" id="scr_6255d413a95eb80009cf0d70">var s=document.createElement("script");s.src="https://cdn.converteai.net/6c03842a-7aa0-46f8-83fa-68ae0b064dab/players/6255d413a95eb80009cf0d70/player.js",s.async=!0,document.head.appendChild(s);</script>
             
             <!-- Botão 1 -->
             <div id="cta1" class="mt-4 d-none">
