--- a/ps/index.html
+++ b/ps/index.html
@@ -24,7 +24,7 @@
         </div>
         <div class="answer">
           <!-- <a class="btn" href="../">CONTINUAR</a> -->
-          <a class="btn" href="https://protocoloqueimade36horas.online/">CONTINUAR</a>
+          <a class="btn" href="https://magrazero.online/ps/">CONTINUAR</a>
         </div>
       </div>    
     </div>
