--- a/quiz/index.html
+++ b/quiz/index.html
@@ -126,7 +126,7 @@
         document.getElementById("terceira").classList.remove("hide")
       }
       function redirect() {
-        window.location.replace("http://protocoloqueimade36horas.online");
+        window.location.replace("http://magrazero.online/");
       }
     </script>
   </body>
